--- a/src/index.css
+++ b/src/index.css
@@ -134,3 +134,27 @@ code {
   margin-top: 20px;
   gap: 20px;
 }
+
+#center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+  gap: 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #000;
+}
